Bug 1068961 - Reset clip rect for color layers. r=roc